--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ngx-clipboard": "14.0.1",
     "ngx-toastr": "14.0.0",
     "nouislider": "14.6.2",
+    "primeflex": "^3.0.1",
     "primeicons": "^4.1.0",
     "primeng": "^12.1.1",
     "rxjs": "7.2.0",
