--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@angular/router": "12.1.2",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "bootstrap": "4.5.2",
-    "chart.js": "2.9.3",
+    "chart.js": "^3.5.1",
     "clipboard": "2.0.6",
     "core-js": "3.15.2",
     "jwt-decode": "^3.1.2",
+    "ng2-charts": "^2.4.3",
     "ngx-clipboard": "14.0.1",
     "ngx-toastr": "14.0.0",
     "nouislider": "14.6.2",
